--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
   <link rel="canonical" href="http://stagedoorapp.com" />
+  <meta name="google-site-verification" content="SAvFrim0Slkky87hhHSAoDlrkHf3nLyvrBy6SOrx9-o" />
 
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
   <meta name="author" content="https://plus.google.com/+Stagedoorapp" />
