Twitter card App Store linking (testing)

--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
   <meta name="twitter:title" content="London theatre app - Stagedoor" />
   <meta name="twitter:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Like, share, and rate your favourite theatre performances and performers. Free for all." />
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
+
+  <meta name="twitter:card" content="app">
+  <meta name="twitter:site" content="@stagedoorLDN">
+  <meta name="twitter:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.">
+  <meta name="twitter:app:country" content="US">
+  <meta name="twitter:app:name:iphone" content="Stagedoor - London theatre app">
+  <meta name="twitter:app:id:iphone" content="963068912">
+  <meta name="twitter:app:url:iphone" content="stagedoor://">
+  <meta name="twitter:app:name:ipad" content="Stagedoor - London theatre app">
+  <meta name="twitter:app:id:ipad" content="963068912">
+  <meta name="twitter:app:url:ipad" content="stagedoor://">
 </head>
 <body>
   <!-- Google Tag Manager -->
