Twitter card App Store linking (testing cont.)

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
 
-  <meta name="twitter:card" content="summary_large_image" />
+  <!--meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com" />
   <meta name="twitter:title" content="London theatre app - Stagedoor" />
   <meta name="twitter:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Like, share, and rate your favourite theatre performances and performers. Free for all." />
-  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
+  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" /-->
 
   <meta name="twitter:card" content="app">
   <meta name="twitter:site" content="@stagedoorLDN">
