added fb in footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
   <!-- Google Tag Manager -->
-  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+  <!--noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -112,7 +112,12 @@
     </section>
 
     <footer class="opacity--50  text--center  padding--top-one-space  padding--bottom-one-space">
-      &copy; Copyright 2016 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoorLDN" target="_blank" rel="nofollow">@stagedoorLDN</a> for updates.</span>
+      <span class="follow-link-footer">
+        <a href="https://twitter.com/stagedoorLDN" target="_blank" rel="nofollow"><img src="images/twitter.svg" alt="twitter logo" class="twitter-icon" />@stagedoorLDN</a>
+        <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span>
+        <a href="https://fb.com/stagedoorapp" target="_blank" rel="nofollow"><img src="images/facebook.svg" alt="facebook logo" class="facebook-icon" />StagedoorApp</a>
+      </span>
+
       <div>
         Stagedoor is a <strong>London theatre app</strong>.
       </div>
