--- a/privacy.html
+++ b/privacy.html
@@ -156,7 +156,11 @@
     </section>
 
     <footer class="opacity--50  text--center  padding--bottom-one-space">
-      &copy; Copyright 2015 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoortweets" target="_blank">@stagedoortweets</a> for updates.</span>
+      <span class="follow-link-footer">
+        <a href="https://twitter.com/stagedoorLDN" target="_blank" rel="nofollow"><img src="images/twitter.svg" alt="twitter logo" class="twitter-icon" />@stagedoorLDN</a>
+        <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span>
+        <a href="https://fb.com/stagedoorapp" target="_blank" rel="nofollow"><img src="images/facebook.svg" alt="facebook logo" class="facebook-icon" />StagedoorApp</a>
+      </span>
     </footer>
   </div>
 
