--- a/partners.html
+++ b/partners.html
@@ -155,7 +155,11 @@
     </section>
 
     <footer class="opacity--50  text--center  padding--top-one-space  padding--bottom-one-space">
-      &copy; Copyright 2016 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoorLDN" target="_blank" rel="nofollow">@stagedoorLDN</a> for updates.</span>
+      <span class="follow-link-footer">
+        <a href="https://twitter.com/stagedoorLDN" target="_blank" rel="nofollow"><img src="images/twitter.svg" alt="twitter logo" class="twitter-icon" />@stagedoorLDN</a>
+        <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span>
+        <a href="https://fb.com/stagedoorapp" target="_blank" rel="nofollow"><img src="images/facebook.svg" alt="facebook logo" class="facebook-icon" />StagedoorApp</a>
+      </span>
       <div>
         Stagedoor &hearts; <strong>London theatre</strong>.
       </div>
