copy change for nimax

--- a/nimaxtheatres.html
+++ b/nimaxtheatres.html
@@ -63,7 +63,7 @@
           <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
         </header>
 
-        <h1 class="padding--top-bottom-one-space">Nimax Theatres is now officially on Stagedoor.</h1>
+        <h1 class="padding--top-bottom-one-space">Nimax Theatres are now officially on Stagedoor.</h1>
         <h2><a href="https://stagedoor.hoko.link/nimaxtheatres" class="appstore-link  no-link-colour" title="Download Stagedoor">Follow Nimax Theatres&rsquo; page</a> to stay up to date with current and upcoming shows.</h2><br/>
         <h3>View behind the scenes photos and videos, get their latest news, and always be in the know!</h3>
         <p class="text--bigger  margin--top-two-spaces">
