--- a/koubanproductions.html
+++ b/koubanproductions.html
@@ -12,7 +12,7 @@
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
   <meta name="description" content="Stay up to date with current and upcoming shows by Kouban Productions. Save and Recommend your favourite ones. Plug into theatre!" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="apple-itunes-app" content="app-id=963068912">
+  <meta name="apple-itunes-app" content="app-id=963068912, app-argument=stagedoor://threatre_company/266">
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/koubanproductions-stagedoor.png" />
@@ -64,7 +64,7 @@
         </header>
 
         <h1 class="padding--top-bottom-one-space">Kouban Productions is now officially on Stagedoor.</h1>
-        <h2><a href="https://stagedoor.hoko.link/koubanproductions" class="appstore-link  no-link-colour" title="Download Stagedoor">Follow Kouban Productions&rsquo;s page</a> to stay up to date with current and upcoming shows.</h2><br/>
+        <h2><a href="https://stagedoor.hoko.link/koubanproductions" class="appstore-link  no-link-colour" title="Download Stagedoor">Follow Kouban Productions&rsquo; page</a> to stay up to date with current and upcoming shows.</h2><br/>
         <h3>View behind the scenes photos and videos, get their latest news, and always be in the know!</h3>
         <p class="text--bigger  margin--top-two-spaces">
           <a href="https://stagedoor.hoko.link/koubanproductions" class="appstore-link  button  button--download  no-link-colour" title="Get Stagedoor for iOS">Get Stagedoor for iOS</a><br/>
@@ -92,7 +92,7 @@
     </section>
 
     <section class="margin--top-bottom-four-spaces  horizontal--center  text--center">
-      <h2>Step into Kouban Productions&rsquo;s Stagedoor.</h2>
+      <h2>Step into Kouban Productions&rsquo; Stagedoor.</h2>
       <p class="text--bigger  margin--top-one-space">
         <a href="https://stagedoor.hoko.link/koubanproductions" class="appstore-link  button  button--download  no-link-colour  horizontal--center" title="Download the app">Download the app</a><br/>
         <span class="block  center-on-mobile">Then search for <em>&ldquo;Kouban Productions&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
