open-in-app button

--- a/koubanproductions.html
+++ b/koubanproductions.html
@@ -44,9 +44,10 @@
 
 
   <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative">
-    <section class="padding--bottom-one-space  show-on-mobile  text--center">
-      <a href="https://stagedoor.hoko.link/koubanproductions" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a><br/>
-      <h2>Stagedoor</h2>
+    <section class="padding--bottom-one-space  show-on-mobile">
+      <a href="https://stagedoor.hoko.link/koubanproductions" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
+      <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
+      <a href="stagedoor://threatre_company/266" class="button--open-in-app">Open in App</a>
     </section>
 
     <section class="cf">
