deep link changes

--- a/oldsoletheatre.html
+++ b/oldsoletheatre.html
@@ -12,7 +12,7 @@
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
   <meta name="description" content="Stay up to date with current and upcoming shows by Old Sole Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="apple-itunes-app" content="app-id=963068912">
+  <meta name="apple-itunes-app" content="app-id=963068912, app-argument=stagedoor://threatre_company/204">
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/oldsoletheatre-stagedoor.png" />
@@ -44,9 +44,10 @@
 
 
   <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative">
-    <section class="padding--bottom-one-space  show-on-mobile  text--center">
-      <a href="https://stagedoor.hoko.link/oldsoletheatre" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a><br/>
-      <h2>Stagedoor</h2>
+    <section class="padding--bottom-one-space  show-on-mobile">
+      <a href="https://stagedoor.hoko.link/oldsoletheatre" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
+      <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
+      <a href="stagedoor://threatre_company/204" class="button--open-in-app">Open in App</a>
     </section>
 
     <section class="cf">
