--- a/soho.html
+++ b/soho.html
@@ -2,23 +2,23 @@
 <html lang="en-gb">
 
 <head>
-  <title>Wyndham Theatre on Stagedoor</title>
+  <title>Soho Theatre on Stagedoor</title>
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
-  <link rel="canonical" href="http://stagedoorapp.com/wyndham" />
+  <link rel="canonical" href="http://stagedoorapp.com/soho" />
 
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
-  <meta name="description" content="Stay up to date with current and upcoming shows at Wyndham Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
+  <meta name="description" content="Stay up to date with current and upcoming shows at Soho Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="apple-itunes-app" content="app-id=963068912, app-argument=stagedoor://venue/152">
+  <meta name="apple-itunes-app" content="app-id=963068912, app-argument=stagedoor://venue/20">
 
   <meta property="fb:app_id" content="1645521525723763"/>
-  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/wyndham-stagedoor.png" />
-  <meta property="og:title" content="Follow Wyndham Theatre on Stagedoor." />
-  <meta property="og:description" content="Stay up to date with current and upcoming shows at Wyndham Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
-  <meta property="og:url" content="http://stagedoorapp.com/wyndham" />
+  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/soho-stagedoor.png" />
+  <meta property="og:title" content="Follow Soho Theatre on Stagedoor." />
+  <meta property="og:description" content="Stay up to date with current and upcoming shows at Soho Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
+  <meta property="og:url" content="http://stagedoorapp.com/soho" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
   <meta property="article:author" content="https://www.facebook.com/stagedoorapp" />
@@ -26,10 +26,10 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
-  <meta name="twitter:url" content="http://stagedoorapp.com/wyndham" />
-  <meta name="twitter:title" content="Follow Wyndham Theatre on Stagedoor." />
-  <meta name="twitter:description" content="Stay up to date with current and upcoming shows at Wyndham Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
-  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/wyndham-stagedoor.png" />
+  <meta name="twitter:url" content="http://stagedoorapp.com/soho" />
+  <meta name="twitter:title" content="Follow Soho Theatre on Stagedoor." />
+  <meta name="twitter:description" content="Stay up to date with current and upcoming shows at Soho Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
+  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/soho-stagedoor.png" />
 </head>
 <body>
   <!-- Google Tag Manager -->
@@ -45,31 +45,31 @@
 
   <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative">
     <section class="padding--bottom-one-space  show-on-mobile">
-      <a href="https://stagedoor.hoko.link/wyndham" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
+      <a href="https://stagedoor.hoko.link/soho" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
       <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
-      <a href="stagedoor://venue/152" class="button--open-in-app">Open in App</a>
+      <a href="stagedoor://venue/20" class="button--open-in-app">Open in App</a>
     </section>
 
     <section class="cf">
       <div class="float--right  width--40">
         <span class="iphone-screenshot  smaller-iphone-width-on-mobile">
-          <img src="images/theatre/iphone/wyndham.jpg" alt="Wyndham Theatre stagedoor" class="iphone-screenshot__inside" />
+          <img src="images/theatre/iphone/soho.jpg" alt="Soho Theatre stagedoor" class="iphone-screenshot__inside" />
           <img src="images/iphone.png" alt="iphone placeholder" />
         </span>
       </div>
 
       <div class="float--left  width--60  margin--top-four-spaces">
         <header class="padding--bottom-one-space  hide-on-mobile">
-          <a href="https://stagedoor.hoko.link/wyndham" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" /></a>
+          <a href="https://stagedoor.hoko.link/soho" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" /></a>
           <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
         </header>
 
-        <h1 class="padding--top-bottom-one-space">Wyndham Theatre is now officially on Stagedoor.</h1>
-        <h2><a href="https://stagedoor.hoko.link/wyndham" class="appstore-link  no-link-colour" title="Download Stagedoor">Follow Wyndham Theatre&rsquo;s page</a> to stay up to date with current and upcoming shows.</h2><br/>
+        <h1 class="padding--top-bottom-one-space">Soho Theatre is now officially on Stagedoor.</h1>
+        <h2><a href="https://stagedoor.hoko.link/soho" class="appstore-link  no-link-colour" title="Download Stagedoor">Follow Soho Theatre&rsquo;s page</a> to stay up to date with current and upcoming shows.</h2><br/>
         <h3>View behind the scenes photos and videos, get their latest news, and always be in the know!</h3>
         <p class="text--bigger  margin--top-two-spaces">
-          <a href="https://stagedoor.hoko.link/wyndham" class="appstore-link  button  button--download  no-link-colour" title="Get Stagedoor for iOS">Get Stagedoor for iOS</a><br/>
-          <span class="block  center-on-mobile">Then search for <em>&ldquo;Wyndham's Theatre&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
+          <a href="https://stagedoor.hoko.link/soho" class="appstore-link  button  button--download  no-link-colour" title="Get Stagedoor for iOS">Get Stagedoor for iOS</a><br/>
+          <span class="block  center-on-mobile">Then search for <em>&ldquo;Soho Theatre&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
         </p>
       </div>
     </section>
@@ -93,10 +93,10 @@
     </section>
 
     <section class="margin--top-bottom-four-spaces  horizontal--center  text--center">
-      <h2>Step into Wyndham Theatre&rsquo;s Stagedoor.</h2>
+      <h2>Step into Soho Theatre&rsquo;s Stagedoor.</h2>
       <p class="text--bigger  margin--top-one-space">
-        <a href="https://stagedoor.hoko.link/wyndham" class="appstore-link  button  button--download  no-link-colour  horizontal--center" title="Download the app">Download the app</a><br/>
-        <span class="block  center-on-mobile">Then search for <em>&ldquo;Wyndham's Theatre&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
+        <a href="https://stagedoor.hoko.link/soho" class="appstore-link  button  button--download  no-link-colour  horizontal--center" title="Download the app">Download the app</a><br/>
+        <span class="block  center-on-mobile">Then search for <em>&ldquo;Soho Theatre&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
       </p>
     </section>
 
@@ -104,8 +104,8 @@
     <footer class="padding--top-two-spaces  padding--bottom-one-space  horizontal--center  text--center">
       <button id="toggle-button">Spread the word and share this!</button>
       <div class="sharing-container  padding--top-half-space">
-        <p>Post <a href="images/theatre/wyndham-stagedoor.png" target="_blank">this image</a> on social networks and send to friends.</p>
-        <p>Or, copy this URL: <input type="text" onClick="this.select();" class="input  text--center" value="http://stagedoorapp.com/wyndham" />
+        <p>Post <a href="images/theatre/soho-stagedoor.png" target="_blank">this image</a> on social networks and send to friends.</p>
+        <p>Or, copy this URL: <input type="text" onClick="this.select();" class="input  text--center" value="http://stagedoorapp.com/soho" />
         <small class="text--grey">When pasting the URL, the above image will be attached automatically.</small>
         </p><br/>
         <div class="opacity--50">
