--- a/partners.html
+++ b/partners.html
@@ -137,11 +137,11 @@
         <div>
           <img src="images/icon/views.svg" class="features-icons  float--left  padding--right-one-space" alt="views" />
           <h2>9. Featured</h2>
-          <p class="text--bigger">Appear in the app’s onboarding process, in the “Stagedoor recommends” section for a month.</p>
+          <p class="text--bigger">Appear in the app&rsquo;s onboarding process, in the &ldquo;Stagedoor recommends&rdquo; section for a month.</p>
         </div>
         <div>
           <img src="images/icon/promotion.svg" class="features-icons  float--left  padding--right-one-space" alt="promotion" />
-          <h2>10. Partner treatement</h2>
+          <h2>10. Partner treatment</h2>
           <p class="text--bigger">Get featured on Stagedoor&rsquo;s social media channels, blog, website, and more.</p>
         </div>
       </div>
