#CamdenFringe official app

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
       <a href="http://stagedoorapp.com" class="current" title="Back to Homepage">Home</a>
       <a href="http://stagedoorapp.com/partners" title="Become a partner">Claim your page</a>
       <a href="https://medium.com/@stagedoor" rel="nofollow" target="_blank" title="Blog">Blog</a>
-      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> iOS app</span></a>
+      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> app</span></a>
+      <a href="http://stagedoorapp.com/camdenfringe" title="Official app of The Camden Fringe" class="hide-on-mobile  camden-fringe-colour">#CamdenFringe</a>
     </nav>
 
     <section class="padding--bottom-one-space  show-on-mobile  text--center">
@@ -107,8 +108,7 @@
     </section>
 
     <section class="margin--top-bottom-four-spaces  text--center">
-      <p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="http://stagedoorapp.com/partners" rel="nofollow">Claim your Stagedoor page &rarr;</a></p>
-      <p>For theatre venues and companies.</p>
+      <p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="http://stagedoorapp.com/partners" class="camden-fringe-colour">Stagedoor is the official app<br/> of The Camden Fringe 2016 &rarr;</a></p>
     </section>
 
     <footer class="opacity--50  text--center  padding--top-one-space  padding--bottom-one-space">
