--- a/partners.html
+++ b/partners.html
@@ -46,7 +46,8 @@
       <a href="http://stagedoorapp.com" title="Back to Homepage">Home</a>
       <a href="http://stagedoorapp.com/partners" title="Become a partner" class="current">Claim your page</a>
       <a href="https://medium.com/@stagedoor" rel="nofollow" target="_blank" title="Blog">Blog</a>
-      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> iOS app</span></a>
+      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> app</span></a>
+      <a href="http://stagedoorapp.com/camdenfringe" title="Official app of The Camden Fringe" class="hide-on-mobile  camden-fringe-colour">#CamdenFringe</a>
     </nav>
 
     <section class="show-on-mobile">
