homepage link fix

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </section>
 
     <section class="margin--top-bottom-four-spaces  text--center">
-      <p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="http://stagedoorapp.com/partners" class="camden-fringe-colour">Stagedoor is the official app<br/> of The Camden Fringe 2016 &rarr;</a></p>
+      <p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="http://stagedoorapp.com/camdenfringe" class="camden-fringe-colour">Stagedoor is the official app<br/> of The Camden Fringe 2016 &rarr;</a></p>
     </section>
 
     <footer class="opacity--50  text--center  padding--top-one-space  padding--bottom-one-space">
