--- a/camdenfringe.html
+++ b/camdenfringe.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <!-- Google Tag Manager -->
-  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+  <!--noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -52,10 +52,12 @@
       <a href="http://stagedoorapp.com/camdenfringe" title="Official app of The Camden Fringe" class="hide-on-mobile  camden-fringe-colour">#CamdenFringe</a>
     </nav>
 
-    <section class="padding--bottom-one-space  show-on-mobile">
-      <a href="http://bit.ly/camfristgdr" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
-      <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
-      <!-- <a href="stagedoor://venue/10" class="button--open-in-app">Open in App</a> -->
+    <section class="show-on-mobile">
+      <header class="margin--bottom-four-spaces">
+        <a href="http://bit.ly/camfristgdr" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
+        <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
+        <!-- <a href="stagedoor://venue/10" class="button--open-in-app">Open in App</a> -->
+      </header>
     </section>
 
     <section class="cf">
