--- a/camdenfringe.html
+++ b/camdenfringe.html
@@ -54,9 +54,11 @@
 
     <section class="show-on-mobile">
       <header class="margin--bottom-four-spaces">
-        <a href="http://bit.ly/camfristgdr" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
-        <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
-        <!-- <a href="stagedoor://venue/10" class="button--open-in-app">Open in App</a> -->
+        <a href="http://stagedoorapp.com"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  vertical-align--neg-15" /></a>
+        <h2 class="padding--left-one-space  block--inline  margin--top-half-space">
+        Stagedoor<br/>
+          <small>Official app of The Camden Fringe.</small>
+        </h2>
       </header>
     </section>
 
