Safari iPhone fix

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 
   <!-- JS scripts -->
-  <script type="text/javascript" src="scripts/partials/_retina.min.js"></script>
+  <!--script type="text/javascript" src="scripts/partials/_retina.min.js"></script-->
   <script>
     // detect if iPhone/iPad replace iTunes link with direct App Store link
     if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
