Fix Metatags and add GA to open deep links page

--- a/open.html
+++ b/open.html
@@ -7,18 +7,18 @@
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
-  <link rel="canonical" href="http://stagedoorapp.com/almeida" />
+  <link rel="canonical" href="http://stagedoorapp.com/open" />
 
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
-  <meta name="description" content="Stay up to date with current and upcoming shows at Almeida Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
+  <meta name="description" content="Please open this link on your iOS device (iPhone, iPad, iPod)." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- <meta name="apple-itunes-app" content="app-argument=stagedoor://venue/4"> -->
 
   <meta property="fb:app_id" content="1645521525723763"/>
-  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/almeida-stagedoor.png" />
-  <meta property="og:title" content="Follow Almeida Theatre on Stagedoor." />
-  <meta property="og:description" content="Stay up to date with current and upcoming shows at Almeida Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
-  <meta property="og:url" content="http://stagedoorapp.com/almeida" />
+  <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
+  <meta property="og:title" content="Stagedoor open in-app link service." />
+  <meta property="og:description" content="The must-have app for the London theatre lover." />
+  <meta property="og:url" content="http://stagedoorapp.com/open" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
   <meta property="article:author" content="https://www.facebook.com/stagedoorapp" />
@@ -26,14 +26,14 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
-  <meta name="twitter:url" content="http://stagedoorapp.com/almeida" />
-  <meta name="twitter:title" content="Follow Almeida Theatre on Stagedoor." />
-  <meta name="twitter:description" content="Stay up to date with current and upcoming shows at Almeida Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
-  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/almeida-stagedoor.png" />
+  <meta name="twitter:url" content="http://stagedoorapp.com/open" />
+  <meta name="twitter:title" content="Stagedoor open in-app link service." />
+  <meta name="twitter:description" content="The must-have app for the London theatre lover." />
+  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 </head>
 <body>
   <!-- Google Tag Manager -->
-  <!--noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
