homepage tofu-up!

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
   <meta name="author" content="https://plus.google.com/+Stagedoorapp" />
-  <meta name="description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Free for all." />
+  <meta name="description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
   <meta property="og:title" content="London theatre app - Stagedoor" />
-  <meta property="og:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Like, share, and rate your favourite theatre performances and performers. Free for all." />
+  <meta property="og:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives." />
   <meta property="og:url" content="http://stagedoorapp.com" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
 
   <meta name="twitter:card" content="app">
   <meta name="twitter:site" content="@stagedoorLDN">
-  <meta name="twitter:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.">
+  <meta name="twitter:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives.">
   <meta name="twitter:app:country" content="US">
   <meta name="twitter:app:name:iphone" content="Stagedoor - London theatre app">
   <meta name="twitter:app:id:iphone" content="963068912">
@@ -33,6 +33,7 @@
   <meta name="twitter:app:name:ipad" content="Stagedoor - London theatre app">
   <meta name="twitter:app:id:ipad" content="963068912">
   <meta name="twitter:app:url:ipad" content="stagedoor://">
+  <meta name="twitter:image" content="http://stagedoorapp.com/images/stagedoor-cover.png">
 </head>
 <body>
   <!-- Google Tag Manager -->
@@ -67,40 +68,82 @@
         </span>
       </div>
 
-      <div class="float--right  width--60  margin--top-five-spaces">
+      <div class="float--right  width--60  margin--top-three-spaces">
         <header class="padding--bottom-one-space  hide-on-mobile">
           <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" /></a>
           <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
+          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/featured-appstore.png" height="43" class="float--right  margin--top-half-space" alt="" /></a>
         </header>
 
         <h1 class="padding--top-bottom-one-space">The must-have <strong>app for the London theatre</strong> lover.</h1>
-        <h2 class="center-on-mobile">Stay up-to-date with what&rsquo;s on, where it&rsquo;s on, and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
+        <h2 class="center-on-mobile">Stay up-to-date with what&rsquo;s on, where it&rsquo;s on, and who&rsquo;s in it. Discover, save, and rate your favourite London theatre shows and creatives.</h2>
         <p class="text--bigger  margin--top-two-spaces">
-          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  no-link-colour" title="Download now for iOS">Download free for iOS</a>
+          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  no-link-colour" title="Download now for iOS">Download on your iPhone</a>
         </p>
-        <small class="opacity--50  padding--top-half-space  center-on-mobile">iOS 7+, iPhone 4S and above. <a href="https://twitter.com/share?text=@stagedoorLDN: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want it for Android?</a></small>
+        <small class="opacity--50  padding--top-half-space  center-on-mobile">Currently only for iOS. <a href="https://twitter.com/share?text=@stagedoorLDN: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want it for Android?</a></small>
+
+        <p class="margin--top-two-spaces  opacity--50">
+          <small class="text--section">Official partner with</small>
+          <img src="images/theatres.png" alt=""  height="45" />
+        </p>
       </div>
     </section>
 
-    <section class="margin--top-bottom-four-spaces  center-on-mobile">
-      <div class="columns--3">
+    <section class="margin--top-bottom-two-spaces  center-on-mobile">
+      <p class="text--center">
+        <small class="text--section  has-rectangle  block--inline">Why Stagedoor?</small>
+      </p>
+
+      <div class="columns--3  margin--top-two-spaces">
         <div>
           <h2>Stay up-to-date</h2>
           <p class="text--bigger">Follow directors, writers, cast, and venues, so you know what&rsquo;s on. Be the first to find out about any <strong>London production</strong> however big or small.</p>
         </div>
         <div>
           <h2>Never miss out</h2>
-          <p class="text--bigger">Discover everything about the theatre performances you want to see and save them in your calendar so that you never miss out.</p>
+          <p class="text--bigger">Discover everything about the theatre shows you want to see. Save them and Stagedoor will notify you when they close, so you never miss out.</p>
         </div>
         <div>
           <h2>Tailor-made for you</h2>
-          <p class="text--bigger">Select from 12 theatre-specific categories to discover great performances and receive personalised recommendations.</p>
+          <p class="text--bigger">Select from 12 theatre-specific categories and follow curated lists to discover great shows and get personalised recommendations.</p>
         </div>
       </div>
     </section>
 
-    <section class="margin--top-bottom-four-spaces  text--center">
-      <p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="http://stagedoorapp.com/camdenfringe" class="camden-fringe-colour">Stagedoor is the official app<br/> of The Camden Fringe 2016 &rarr;</a></p>
+    <section class="margin--top-bottom-two-spaces  text--center">
+      <h2>Discover the shows no one&rsquo;s seen yet.</h2>
+      <p class="text--bigger  margin--top-one-space">
+        <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  horizontal--center no-link-colour" title="Download now for iOS">Download Stagedoor</a>
+      </p>
+      <!--p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="http://stagedoorapp.com/camdenfringe" class="camden-fringe-colour">Stagedoor is the official app<br/> of The Camden Fringe 2016 &rarr;</a></p-->
+    </section>
+
+    <section class="margin--top-four-spaces  center-on-mobile">
+      <p class="text--center">
+        <small class="text--section  has-rectangle  block--inline">Important facts</small>
+      </p>
+
+      <div class="columns--3  margin--top-two-spaces">
+        <div>
+          <h2>Loved by Apple</h2>
+          <p class="text--bigger">With over 2 million apps, Apple&rsquo;s app store is a crowded place. Imagine our surprise when Stagedoor got featured as one of the <a href="https://twitter.com/StagedoorLDN/status/769999854483415040" target="_blank" rel="nofollow">&ldquo;Loved by Apple&rdquo; apps</a>. Twice! In one month!</p>
+        </div>
+        <div>
+          <h2>Powerful partnerships</h2>
+          <p class="text--bigger">We&rsquo;ve partnered with <a href="http://stagedoorapp.com/almeida">Almeida</a>, SoHo, The Old Vic, Barbican, Nimax Theatres, Delfont Mackintosh Theatres, and 25 other venues &amp; theatre companies to bring unique content into Stagedoor.</p>
+        </div>
+        <div>
+          <h2>#CamdenFringe 2016</h2>
+          <p class="text--bigger">Stagedoor became the official app of the biggest theatre festival in London, <a href="http://stagedoorapp.com/camdenfringe">The Camden Fringe</a>, listing over 900 performances and 250 theatre companies.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="margin--top-bottom-two-spaces  text--center">
+      <h2><strong>London&rsquo;s most comprehensive theatre guide</strong>, <br/>tailor-made for you.</h2>
+      <p class="text--bigger  margin--top-one-space">
+        <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  horizontal--center no-link-colour" title="Download now for iOS">Get Stagedoor for free!</a>
+      </p>
     </section>
 
     <footer class="opacity--50  text--center  padding--top-one-space  padding--bottom-one-space">
